Ensure determinism in Pivotable getColumns